2016-03-18  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c (plot_boxes): Backport fix to prevents array overrun if
	there are undefined points are at the end of a data set.

2016-03-17  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot2d.c:  If pointtype PT_CHARACTER is the default for a plot
	then allow text options like "tc rgb 'foo'" in the plot command.

2016-03-15  Ethan A Merritt  <merritt@u.washington.edu>

	* src/qtterminal/qt_term.cpp:  Revise "set term qt <N> close" so that
	1) It closes window with id N but leaves the current window id unchanged
	2) It executes the command immediately rather than queueing it
	Bug #1753

	* src/qtterminal/QtGnuplotWindow.cpp:  Do not set the DeleteOnClose
	attribute of plot windows.  This avoids an error message if you send a
	new plot after explicitly closing the current plot window.
	Bug #1753 #1554

2016-03-09 Allin Cottrell  <cottrell@wfu.edu>

	* configure.in:  Backport configuration tweak for wxt on OSX.
	Do not assume that wxwidgets uses the gtk2 toolkit.
	It might use gtk3 or on OSX it might use cocoa.

	* term/aquaterm.trm: Incorrect argument type to abs() or fabs().

2016-03-05  Ethan A Merritt  <merritt@u.washington.edu>

	* src/wxterminal/gp_cairo.c (gp_cairo_set_linewidth):  Change the 
	minimum linewidth supported by pdfcairo to match the other cairo 
	terminals.  Reduce it for all of them to 0.20 pt (was 0.25 or 0.50).

2016-03-01  Ethan A Merritt  <merritt@u.washington.edu>

	* graphics.c (map_position_double): Fix stupid typo that tried to map a
	linked y axis through the x mapping function. This always mis-placed
	objects and labels whose position is given in terms of y2 whenever y2 is
	linked to y1. Furthermore placement on either x2 or y2 could be wrong if
	the most recent plot did not use that same linked axis.

2016-02-22  Release 5.0.3

2016-02-13  Bastian Maerkisch  <bmaerkisch@web.de>

	* config/mingw/Makefile:  Use gnuplot's default settings to generate