@@ -1,6 +1,7 @@
 Changes in 5.0.4
 ================
 * CHANGE minimum linewidth of all cairo terminals is now 0.2 pt
+* CHANGE in-line datablock lines are not limited to 1024 characters
 * FIX placement of objects and labels using linked secondary axis coordinates
 * FIX 'set term qt <N> close' acts immediately rather than after next mouse event
 
